deploy with docker-compose